--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-fgsfgjekrjh
+<html>
+    <head>
+        <title><youtube.clone></youtube></title>
+    </head> 
+    <body>
+        <div>
+            <div></div>
+            <div></div>
+            <div></div>
+            </div>
+    </body>
+</html>
